# lrc

./: .pre-commit-config.yaml  pyproject.toml
src/lrc/: __init__.py
